# fastapi_project

./: alembic.ini  pyproject.toml
logs/: app.log.2025-03-21
src/course_web_service/: main.py
src/course_web_service/apps/: __init__.py
src/course_web_service/apps/auth/: enums.py  handlers.py  managers.py  routes.py  schemas.py  services.py
src/course_web_service/apps/auth_app/: handlers.py  routes.py  schemas.py  security.py  services.py
src/course_web_service/apps/user_app/: enums.py  manager.py  routes.py  schemas.py  services.py
src/course_web_service/core/: settings.py
src/course_web_service/core/core_dependecy/: db_dependency.py
src/course_web_service/database/: migrations_scripts.py
src/course_web_service/database/alembic/: env.py
src/course_web_service/database/alembic/versions/: 2025_02_27_2302-442e42dc17cf_create_user_table.py
src/course_web_service/database/initial_data/: initial_data.py  roles.yaml  users.yaml
src/course_web_service/database/mixins/: id_mixins.py  timestamp_mixins.py
src/course_web_service/database/models/: __init__.py  base.py  content.py  course.py  payment.py  review.py  user.py
src/course_web_service/utils/: logger.py
tests/: conftest.py
tests/tests_auth/: test_auth_handler.py  test_enums.py
